# Desktop-Widget

./: CMakeLists.txt  README.md
src/: ball.c  ball.h  clock.c  clock.h  main.c  mandelbrot.c  mandelbrot.h  quote.c  quote.h
